<resources>
    <string name="app_name">GestioneRubrica</string>

    <string name="NEW_CONTACT_TITLE">NUOVO CONTATTO</string>
    <string name="NAME_LABEL">Nome:</string>
    <string name="SURNAME_LABEL">Cognome:</string>
    <string name="ADDRESS_LABEL">Indirizzo:</string>
    <string name="PHONE_NUMBER_LABEL">Telefono:</string>
    <string name="EMAIL_LABEL">Email:</string>
    <string name="SAVE_LABEL">Salva</string>

    <string name="EDIT_ACCOUNT_TITLE">Modifica contatto - %1$s</string>
    <!--NB si possono mettere dei parametri nei valori stringa, con %1$s -->
    <!--%1$ (1 sta per il primo parametro, $s indica tipo stringa  -->

    <string name="SAVED_MESSAGE">Salvataggio effettuato!</string>

    <string name="CONTACTS_LIST_TITLE">ELENCO CONTATTI</string>
    <string name="SELECT_ALL_BUTTON_LABEL">Seleziona tutti</string>
    <string name="DESELECT_ALL_BUTTON_LABEL">Deseleziona Tutto</string>
    <string name="DELETE_BUTTON">Elimina</string>

    <string name="DELETE_SUCCESS_MESSAGE">Contatti eliminati con successo!</string>
    <string name="DELETE_CONFIRMATION_MESSAGE">Sei sicuro di voler eliminare gli elementi selezionati?</string>
    <string name="YES">Si</string>
    <string name="NO">No</string>

    <string name="ACTION_SELECTION_TEXT">Seleziona azione</string>

    <string name="CAMERA_ACTION_TEXT">Fotocamera</string>
    <string name="GALLERY_ACTION_TEXT">Galleria</string>

</resources>
